# FDESolver

./: .gitignore  CMakeLists.txt  README.md  main.cpp
libs/: CMakeLists.txt  equation_solver.cpp  equation_solver.hpp  mfdes.cpp  mfdes.hpp  rules_impl.cpp  rules_impl.hpp  sfdes.cpp  sfdes.hpp
libs/linalg/: CMakeLists.txt  matrix.cpp  matrix.hpp
libs/linalg/ut/: CMakeLists.txt  test.cpp
libs/logger/: CMakeLists.txt  logger.cpp  logger.hpp
libs/printer/: printer.cpp  printer.hpp
libs/protos/: CMakeLists.txt  config.proto  matrix.proto  result.proto
libs/python/: result_drawer.py
libs/utils/: CMakeLists.txt  utils.cpp  utils.hpp
tasks/: README.md
tasks/task1/: task1.md
